@@ -8428,6 +8428,10 @@ AT_DATA([prog.cob], [
            10  FILLER             PICTURE X(1). 
            10  COMX-FLD2          PICTURE X(3) COMP-X.
            10  FILLER             PICTURE X(1). 
+           10  COMX-FLT           COMP-1 SYNC.
+           10  FILLER             PICTURE X(1). 
+           10  COMX-DBL           COMP-2 SYNC.
+           10  FILLER             PICTURE X(1). 
 
        PROCEDURE DIVISION.
 
@@ -8522,6 +8526,8 @@ AT_DATA([prog.cob], [
            MOVE ALL "x"    TO TSTGRPX.
            MOVE "12345678" TO COMX-FLD1 (1:).
            MOVE "12345678" TO COMX-FLD2 (1:).
+           MOVE "12345678" TO COMX-FLT (1:).
+           MOVE "12345678" TO COMX-DBL (1:).
            DISPLAY "COMP-X   : " TSTGRPX.
            STOP RUN.
 ])
@@ -8545,7 +8551,7 @@ COMP-3   : x1234567x1234x
 COMP-1   : 12341234
 COMP-2   : 1234567812345678
 SIGN L/T : x-01x02-x-03x04-x
-COMP-X   : x123x123x
+COMP-X   : x123x123x1234x12345678x
 ], [])
 
 AT_CLEANUP
@@ -8697,6 +8703,10 @@ AT_DATA([prog.cob], [
            10  FILLER             PICTURE X(1). 
            10  COMX-FLD2          PICTURE X(3) COMP-X.
            10  FILLER             PICTURE X(1). 
+           10  COMX-FLT           COMP-1 SYNC.
+           10  FILLER             PICTURE X(1). 
+           10  COMX-DBL           COMP-2 SYNC.
+           10  FILLER             PICTURE X(1). 
 
        PROCEDURE DIVISION.
 
@@ -8791,6 +8801,8 @@ AT_DATA([prog.cob], [
            MOVE ALL "x"    TO TSTGRPX.
            MOVE "12345678" TO COMX-FLD1 (1:).
            MOVE "12345678" TO COMX-FLD2 (1:).
+           MOVE "12345678" TO COMX-FLT (1:).
+           MOVE "12345678" TO COMX-DBL (1:).
            DISPLAY "COMP-X   : " TSTGRPX.
            STOP RUN.
 ])
@@ -8814,7 +8826,7 @@ COMP-3   : x1234567x1234x
 COMP-1   : 12341234
 COMP-2   : 1234567812345678
 SIGN L/T : x-01x02-x-03x04-x
-COMP-X   : x123x123x
+COMP-X   : x123x123xxxx1234xxxxxxxx12345678x
 ], [])
 
 AT_CLEANUP
