@@ -1,6 +1,10 @@
 
 2017-06-24  Ron Norman <rjn@inglenet.com>
 
+	* field.c: For COMP-2 and a few other align to 8 byte boundary
+
+2017-06-24  Ron Norman <rjn@inglenet.com>
+
 	* field.c,tree.h: Fixed to carry USAGE, SYNC, SIGN LEADING/TRAILING
 	  attributes from group item to elementary data field
 	  Fixed SYNC so it aligns the same as Micro Focus on 2 or 4 byte
